--- a/Intrusion_ml.ipynb
+++ b/Intrusion_ml.ipynb
@@ -2535,7 +2535,7 @@
     "\n",
     "\n",
     "for col in data_test.columns.values:\n",
-    "# Encoding only categorical variables\n",
+    "# Encoding only numerical variables\n",
     "    if data_test[col].dtypes=='float64'or data_test[col].dtypes=='int64':\n",
     "        numerical_f.append(data_test[col].name)\n",
     "        \n",
