--- a/Intrusion_ml.ipynb
+++ b/Intrusion_ml.ipynb
@@ -2519,7 +2519,7 @@
     "\n",
     "numerical_f=[]\n",
     "for col in data.columns.values:\n",
-    "# Encoding only categorical variables\n",
+    "# Encoding only numerical variables\n",
     "    if data[col].dtypes=='float64'or data[col].dtypes=='int64':\n",
     "        numerical_f.append(data[col].name)\n",
     "        \n",
